--- a/src/app/components/pop/dialog-overview-example-dialog.html
+++ b/src/app/components/pop/dialog-overview-example-dialog.html
@@ -29,6 +29,7 @@
 	</mat-list>
 </div>
 <div mat-dialog-actions>
+<!-- <button mat-button (click)="bookClick()">Book now> -->
 	<button mat-button (click)="onNoClick()">No Thanks</button>
 	<button mat-button (click)="ok()" cdkFocusInitial>Ok</button>
 </div>
