--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -55,8 +55,9 @@
                         <div class="widget">
                             <h4>follow us</h4>
                             <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://facebook.com/Thetixs" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/the_tixs"><i class="fa fa-twitter"></i></a></li>
+                                 <li><a href="https://instagram.com/the_tixs"><i class="fa fa-instagram"></i></a></li>
                                
                             </ul>
                         </div>
