--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -220,7 +220,8 @@ Version      : 1.0
         margin-bottom: 5px;
     }
     .section-title {
-        margin-bottom: 30px;
+        margin-top: 30px;
+        margin-bottom: 10px;
     }
     .section-title h2 {
         font-size: 30px;
@@ -951,6 +952,9 @@ Version      : 1.0
     .header_top {
         display: none;
     }
+    .avatar{
+        display: none;
+    }
     .guest-rate-wrapper {
         display: none;
     }
@@ -1082,6 +1086,7 @@ Version      : 1.0
     .logo img {
         width: 150px;
     }
+    
     .offer {
         position: relative;
         margin-bottom: 5px;
